src/main/resources/include/DirectOutput.h

//=============================================================================
// Callbacks

typedef void (__stdcall *Pfn_DirectOutput_EnumerateCallback)(void* hDevice, void* pCtxt);
typedef void (__stdcall *Pfn_DirectOutput_DeviceChange)(void* hDevice, bool bAdded, void* pCtxt);
typedef void (__stdcall *Pfn_DirectOutput_PageChange)(void* hDevice, DWORD dwPage, bool bSetActive, void* pCtxt);
typedef void (__stdcall *Pfn_DirectOutput_SoftButtonChange)(void* hDevice, DWORD dwButtons, void* pCtxt);
//=============================================================================
// Library Initialization

// HRESULT DirectOutput_Initialize(const wchar_t* wszPluginName);
// Initialize the library
// Parameters
//    wszPluginName : null-terminated wchar_t name of the plugin. Used for debugging purposes. Can be NULL
// Returns
//    S_OK : succeeded
HRESULT __stdcall DirectOutput_Initialize(const wchar_t* wszPluginName);
// HRESULT DirectOutput_Deinitialize();
// Cleanup the library
// Parameters (None)
// Returns
//    S_OK : succeeded
HRESULT __stdcall DirectOutput_Deinitialize();
// HRESULT DirectOutput_RegisterDeviceCallback(Pfn_DirectOutput_DeviceChange pfnCb, void* pCtxt);
// Register a callback. Callback will be called whenever a device is added or removed, or when DirectOutput_Enumerate is called
// Parameters
//     pfnCb : Pointer to the callback function to be called when a device is added or removed
//     pCtxt : Caller supplied context pointer, passed to the callback function
// Returns
//     S_OK : succeeded
HRESULT __stdcall DirectOutput_RegisterDeviceCallback(Pfn_DirectOutput_DeviceChange pfnCb, void* pCtxt);
// HRESULT DirectOutput_Enumerate();
// Enumerate all devices currently attached. Calls DeviceChange callback.
// Parameters (None)
// Returns
//     S_OK : succeeded
//HRESULT __stdcall DirectOutput_Enumerate();
HRESULT __stdcall DirectOutput_Enumerate(Pfn_DirectOutput_EnumerateCallback pfnCb, void* pCtxt);
//=============================================================================
// Recieving Notifications From Devices

// HRESULT DirectOutput_RegisterPageCallback(void* hDevice, Pfn_DirectOutput_PageChange pfnCb, void* pCtxt);
// Register a callback. Called when the page changes. Callee will only recieve notifications about pages they added
// Parameters
//     hDevice : opaque device handle
//     pfnCb : caller supplied callback function, called when the active page is changed to/from one of the caller's pages
//     pCtxt : caller supplied context pointer, passed to the callback function
// Returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
HRESULT __stdcall DirectOutput_RegisterPageCallback(void* hDevice, Pfn_DirectOutput_PageChange pfnCb, void* pCtxt);
// HRESULT DirectOutput_RegisterSoftButtonCallback(void* hDevice, Pfn_DirectOutput_SoftButtonChange pfnCb, void* pCtxt);
// Register a callback. Called when the soft buttons are changed and the callee's page is active
// Parameters
//     hDevice : opaque device handle
//     pfnCb : caller supplied callback function, called when the soft buttons are changed and one of the caller's pages is active
//     pCtxt : caller supplied context pointer, passed to the callback function
// Returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
HRESULT __stdcall DirectOutput_RegisterSoftButtonCallback(void* hDevice, Pfn_DirectOutput_SoftButtonChange pfnCb, void* pCtxt);
//=============================================================================
// Query Information From The Device

// HRESULT DirectOutput_GetDeviceType(void* hDevice, LPGUID pGuid);
// Get the device type GUID. See DeviceType_* constants
// Parameters
//     hDevice : opaque device handle
//     pGuid : pointer to GUID to recieve device type identifier. See DeviceType_* constants
// Returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
//     E_INVALIDARG : pGuid is NULL
HRESULT __stdcall DirectOutput_GetDeviceType(void* hDevice, LPGUID pGuid);
// HRESULT DirectOutput_GetDeviceInstance(void* hDevice, LPGUID pGuid);
// Get the device instance GUID used by IDirectInput::CreateDevice
// Parameters
//     hDevice : opaque device handle
//     pGuid : pointer to GUID to recieve device's DirectInput Instance Guid.
// Returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
//     E_INVALIDARG : pGuid is NULL
//     E_NOTIMPL : hDevice does not support DirectInput.
HRESULT __stdcall DirectOutput_GetDeviceInstance(void* hDevice, LPGUID pGuid);
//=============================================================================
// Page Commands

// HRESULT DirectOutput_AddPage(void* hDevice, DWORD dwPage, DWORD dwFlags)
// Adds a page to the device
// Parameters
//     hDevice : opaque device handle
//     dwPage : caller assigned page id to add
//     wszDebugName : null-terminated wchar_t string. Only used for debugging, can be NULL
//     dwFlags : flags ( 0 | FLAG_SET_AS_ACTIVE )
// Returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
HRESULT __stdcall DirectOutput_AddPage(void* hDevice, DWORD dwPage, const wchar_t* wszDebugName, DWORD dwFlags);
// HRESULT DirectOutput_RemovePage(void* hDevice, DWORD dwPage)
// Removes a page from the device
// Parameters
//     hDevice : opaque device handle
//     dwPage : caller assigned page id to remove
// Returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
//     E_INVALIDARG : dwPage is not a valid page id
HRESULT __stdcall DirectOutput_RemovePage(void* hDevice, DWORD dwPage);
//=============================================================================
// Simple Displaying Commands

// HRESULT DirectOutput_SetLed(void* hDevice, DWORD dwPage, DWORD dwIndex, DWORD dwValue);
// Set the state of a LED on the device
// Parameters
//     hDevice : opaque device handle
//     dwPage : page to display the led on
//     dwIndex : index of the led
//     dwValue : value of the led (0 is off)
// returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
//     E_NOTIMPL : hDevice does not have any leds
//     E_INVALIDARG : dwPage or dwIndex is not a valid id
//     E_PAGENOTACTIVE : dwPage is not the active page
HRESULT __stdcall DirectOutput_SetLed(void* hDevice, DWORD dwPage, DWORD dwIndex, DWORD dwValue);
// HRESULT DirectOutput_SetImage(void* hDevice, DWORD dwPage, DWORD dwIndex, DWORD cbValue, const void* pvValue);
// Set the image on the device.
// Parameters
//     hDevice : opaque device handle
//     dwPage : page to display the image on
//     dwIndex : index of the image
//     cbValue : the count of bytes of pvValue
//     pvValue : the raw bytes from a BMP (only the bytes that contain pixel data - must be correct format and size)
// returns
//     S_OK : succeeded
//     E_HANDLE : hDevice is not a valid device handle
//     E_NOTIMPL : hDevice does not have any images
//     E_INVALIDARG : dwPage or dwIndex is not a valid id
//     E_PAGENOTACTIVE : dwPage is not the active page
//     E_BUFFERTOOSMALL : cbValue is not of the correct size
HRESULT __stdcall DirectOutput_SetImage(void* hDevice, DWORD dwPage, DWORD dwIndex, DWORD cbValue, const void* pvValue);